# compiler

./: .gitignore  CMakeLists.txt  main.cpp  mainTest.cpp
code/: compiler.cpp  compiler.hpp  debug.cpp  debug.hpp
code/Checker/: CMakeLists.txt
code/Checker/inc/: Checker.hpp  CheckerScanner.hpp
code/Checker/src/: Checker.cpp
code/Checker/test/: CheckerTest.cpp  CorrectCodeTest.cpp
code/Generator/inc/: Compiler.hpp  Driver.hpp  Finder.hpp  Generator.hpp  GeneratorScanner.hpp  Replacer.hpp  Variable.hpp
code/Generator/src/: Compiler.cpp  Driver.cpp  Finder.cpp  Generator.cpp  Replacer.cpp
code/Generator/test/: AssignTest.cpp  BasicTest.cpp  CompilerTest.cpp  CompilerTest.hpp  DriverTest.cpp  FinderTest.cpp  GeneratorTest.cpp  ReadWriteTest.cpp  ReplacerTest.cpp
code/Interpreter/inc/: Interpreter.hpp
code/Interpreter/src/: Interpreter.cpp
code/Optimizer/inc/: Optimizer.hpp  OptimizerScanner.hpp
code/Optimizer/src/: Optimizer.cpp
code/Optimizer/test/: OptimizerTest.cpp
code/inc/: Condition.hpp  Expression.hpp  Scanner.hpp  Variable.hpp
code/src/: Expression.cpp
code/test/: AllTest.cpp  AssignTest.cpp  BasicTest.cpp  CompilerTest.hpp  DriverTest.cpp  ForTest.cpp  IfElseTest.cpp  ReadWriteTest.cpp  WhileTest.cpp
